--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -16,9 +16,10 @@
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.2",
-    "svelte": "^3.55.0"
+    "svelte": "^3.55.0",
+    "sirv-cli": "^2.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+  
   }
 }
